--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@ npm install @ngx-translate/http-loader
 
 https://www.youtube.com/watch?v=jCvsy4XSOEQ
 -->
-
+<!-- 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 -->
 
 <div class="language-pricker-area">
   <div class="picker-label">
